comitando os itens editaveis